syntax = "proto3";
package proto;
option go_package = "./;grpc";

message FileUploadRequest {
    string file_name = 1;
    bytes batch = 2;
}

message FileUploadResponse {
    string file_name = 1;
    uint32 size = 2;
    string message = 3;
  }

service FileUploadService {
    rpc UploadFile (stream FileUploadRequest) returns (FileUploadResponse);
}